test/TestPhases/causality/invalid/externWriteConflict.blc

activity SideEffect()()
    @[COutput(binding="", header="")]
    extern var foo: float32
    await false
end

@[EntryPoint]
activity E ()()
    cobegin
        run SideEffect()
    with
        run SideEffect()
    end
    await true
end